--- a/client/build.gradle
+++ b/client/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'com.github.johnrengelman.shadow' version '7.0.0'
 }
 
 group = 'dev.mateusneres.bytechat'
@@ -14,13 +15,14 @@ java {
     targetCompatibility = JavaVersion.VERSION_1_8
 }
 
-task runClientMain(type: JavaExec) {
-    group = 'application'
-    description = 'Executes the main class of the ByteChatClient'
-    main = 'dev.mateusneres.bytechat.client.ByteChatClient'
+shadowJar {
+    manifest {
+        attributes 'Main-Class': 'dev.mateusneres.bytechat.client.ByteChatClient'
+    }
 
-    classpath = sourceSets.main.runtimeClasspath
+    archiveFileName = 'ByteChat-Client.jar'
 }
+
 
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
