--- a/server/build.gradle
+++ b/server/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'com.github.johnrengelman.shadow' version '7.0.0'
 }
 
 group = 'dev.mateusneres.bytechat'
@@ -12,6 +13,14 @@ repositories {
 java {
     sourceCompatibility = JavaVersion.VERSION_1_8
     targetCompatibility = JavaVersion.VERSION_1_8
+}
+
+shadowJar {
+    manifest {
+        attributes 'Main-Class': 'dev.mateusneres.bytechat.server.ByteChatServer'
+    }
+
+    archiveFileName = 'ByteChat-Client.jar'
 }
 
 dependencies {
